@@ -1,4 +1,9 @@
-2008-07-23  Christophe Romain  <christophe.romain@process-one.net>
+2008-07-24  Badlop  <badlop@process-one.net>
+
+	* src/mod_register.erl: When a registration is blocked due to IP
+	limitation, return description in error stanza (EJAB-692)
+	
+2008-07-24  Christophe Romain  <christophe.romain@process-one.net>
 
 	* src/mod_pubsub/mod_pubsub.erl: Allow owner to subscribe/get its own
 	node (EJAB-705)
